--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="searchpane">
-	<h3>Address or hotel name in St. Petersburg</h3>
+	<h3>Address in St. Petersburg</h3>
     <div class="searchbox">
 	    <input id="address" name="address" />
     </div>
