--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,40 +1,30 @@
-html, body, h1, h2, h3, h4, hr
-{
+html, body, h1, h2, h3, h4, hr {
     margin: 0;
     padding: 0;
 }
-div
-{
-	display: block;
+div {
+    display: block;
 }
-a:link 
-{
-	color: #12C;
-	cursor: pointer;
+a:link {
+    color: #12C;
+    cursor: pointer;
 }
-
-html
-{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
-
-.searchpane
-{
+.searchpane {
     position: relative;
-    top: 220px;
+    top: 150px;
     margin: auto;
-    min-width: 534px;
     padding: 0 223px !important;
     max-width: 572px;
 }
-.searchpane h3
-{
+.searchpane h3 {
     color: #DD4B39;
-    font-size: 1.2em;    
+    font-size: 1.2em;
 }
-.searchbox
-{
+.searchbox {
     background: white;
     border: 1px solid #D9D9D9;
     border-top: 1px solid silver;
@@ -43,8 +33,7 @@ html
     margin-top: .5em;
     margin-bottom: .5em;
 }
-.searchbox input
-{
+.searchbox input {
     background-color: transparent;
     border: 0px;
     width: 508px;
@@ -55,250 +44,209 @@ html
     font-size: 1.2em;
     margin: 3px 8px 1px 8px;
 }
-
-.pageheader
-{
+.ui-autocomplete {
+    max-height: 270px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+    /* add padding to account for vertical scrollbar */
+    padding-right: 20px;
+}
+.pageheader {
     width: 100%;
     background-color: #222;
-    padding: .5em .7em; 
+    padding: .5em .7em;
 }
-.pageheader a, .pageheader a:active, .pageheader a:visited
-{
+.pageheader a, .pageheader a:active, .pageheader a:visited {
     color: white;
     text-decoration: none;
     font-size: 1em;
 }
-
-.button
-{
-	border-radius: 2px;
-	cursor: default;
-	font-size: .8em;
-	font-weight: bold;
-	text-align: center;
-	height: 27px;
-	line-height: 27px;
-	min-width: 54px;
-	outline: 0;
-	padding: 0 8px;
-	display: inline-block;
+.button {
+    border-radius: 2px;
+    cursor: default;
+    font-size: .8em;
+    font-weight: bold;
+    text-align: center;
+    height: 27px;
+    line-height: 27px;
+    min-width: 54px;
+    outline: 0;
+    padding: 0 8px;
+    display: inline-block;
 }
-.blue
-{
-	background-color: #4D90FE;
-	background-image: linear-gradient(top,#4D90FE,#4787ED);
-	background-image: -webkit-linear-gradient(top,#4D90FE,#4787ED);
-	background-image: -moz-linear-gradient(top,#4D90FE,#4787ED);
-	background-image: -ms-linear-gradient(top,#4D90FE,#4787ED);
-	background-image: -o-linear-gradient(top,#4D90FE,#4787ED);
-	border: 1px solid #3079ED;
-	color: white;	
+.blue {
+    background-color: #4D90FE;
+    background-image: linear-gradient(top,#4D90FE,#4787ED);
+    background-image: -webkit-linear-gradient(top,#4D90FE,#4787ED);
+    background-image: -moz-linear-gradient(top,#4D90FE,#4787ED);
+    background-image: -ms-linear-gradient(top,#4D90FE,#4787ED);
+    background-image: -o-linear-gradient(top,#4D90FE,#4787ED);
+    border: 1px solid #3079ED;
+    color: white;
 }
-.blue:hover
-{
-	background-color: #357AE8;
-	background-image: linear-gradient(top,#4D90FE,#357AE8);
-	background-image: -webkit-linear-gradient(top,#4D90FE,#357AE8);
-	background-image: -moz-linear-gradient(top,#4D90FE,#357AE8);
-	background-image: -ms-linear-gradient(top,#4D90FE,#357AE8);
-	background-image: -o-linear-gradient(top,#4D90FE,#357AE8);
-	border: 1px solid #2F5BB7;
+.blue:hover {
+    background-color: #357AE8;
+    background-image: linear-gradient(top,#4D90FE,#357AE8);
+    background-image: -webkit-linear-gradient(top,#4D90FE,#357AE8);
+    background-image: -moz-linear-gradient(top,#4D90FE,#357AE8);
+    background-image: -ms-linear-gradient(top,#4D90FE,#357AE8);
+    background-image: -o-linear-gradient(top,#4D90FE,#357AE8);
+    border: 1px solid #2F5BB7;
 }
-.gray
-{
-	background-color: #F5F5F5;
-	background-image: -webkit-linear-gradient(top,#F5F5F5,#F1F1F1);
-	background-image: -moz-linear-gradient(top,#F5F5F5,#F1F1F1);
-	background-image: -ms-linear-gradient(top,#F5F5F5,#F1F1F1);
-	background-image: -o-linear-gradient(top,#F5F5F5,#F1F1F1);
-	background-image: linear-gradient(top,#F5F5F5,#F1F1F1);
-	color: #444;
-	border: 1px solid rgba(0, 0, 0, 0.1);	
+.gray {
+    background-color: #F5F5F5;
+    background-image: -webkit-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -moz-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -ms-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: -o-linear-gradient(top,#F5F5F5,#F1F1F1);
+    background-image: linear-gradient(top,#F5F5F5,#F1F1F1);
+    color: #444;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.gray:hover
-{
-	background-color: #F8F8F8;
-	background-image: -webkit-linear-gradient(top,#F8F8F8,#F1F1F1);
-	background-image: -moz-linear-gradient(top,#F8F8F8,#F1F1F1);
-	background-image: -ms-linear-gradient(top,#F8F8F8,#F1F1F1);
-	background-image: -o-linear-gradient(top,#F8F8F8,#F1F1F1);
-	background-image: linear-gradient(top,#F8F8F8,#F1F1F1);
-	color: #333;
-	border: 1px solid #C6C6C6;
+.gray:hover {
+    background-color: #F8F8F8;
+    background-image: -webkit-linear-gradient(top,#F8F8F8,#F1F1F1);
+    background-image: -moz-linear-gradient(top,#F8F8F8,#F1F1F1);
+    background-image: -ms-linear-gradient(top,#F8F8F8,#F1F1F1);
+    background-image: -o-linear-gradient(top,#F8F8F8,#F1F1F1);
+    background-image: linear-gradient(top,#F8F8F8,#F1F1F1);
+    color: #333;
+    border: 1px solid #C6C6C6;
 }
-.linkbutton
-{
-	font-size: .8em;
-	font-weight: bold;
-	color: #15C;
-	text-decoration: none;
-	cursor: pointer;
+.linkbutton {
+    font-size: .8em;
+    font-weight: bold;
+    color: #15C;
+    text-decoration: none;
+    cursor: pointer;
 }
-.linkbutton:hover
-{
-	text-decoration: underline;
+.linkbutton:hover {
+    text-decoration: underline;
 }
-
-
-.itinerary
-{
-	width: 620px;
-	margin: 1.3em;
+.itinerary {
+    width: 620px;
+    margin: 1.3em;
 }
-.itinerary h1
-{
-	color: #DD4B39;
-	font-size: 2em;
-	margin-bottom: .5em;	
+.itinerary h1 {
+    color: #DD4B39;
+    font-size: 2em;
+    margin-bottom: .5em;
 }
-.itinerary .buttons
-{
-	float: right;
-	overflow: hidden;
+.itinerary .buttons {
+    float: right;
+    overflow: hidden;
 }
-.itinerary .title
-{
-	margin: 0.6em 0 .2em 0;	
+.itinerary .title {
+    margin: 0.6em 0 .2em 0;
 }
-.itinerary .title h2
-{
-	color: #DD4B39;
-	font-size: 1.4em;
-	font-weight: normal;	
-	float: left;
-	margin-right: 1em;
+.itinerary .title h2 {
+    color: #DD4B39;
+    font-size: 1.4em;
+    font-weight: normal;
+    float: left;
+    margin-right: 1em;
 }
-.itinerary .summary
-{
-	color: #093;
-	margin-bottom: 1.1em;
-	clear: both;
+.itinerary .summary {
+    color: #093;
+    margin-bottom: 1.1em;
+    clear: both;
 }
-.itinerary .step 
-{
-	position: relative;
-	margin: .8em 0 1.3em 0;
-	clear: both;
+.itinerary .step {
+    position: relative;
+    margin: .8em 0 1.3em 0;
+    clear: both;
 }
-.itinerary .step::after
-{	
-	content: '.';
-	display: block;
-	height: 0;
-	clear: both;
-	font-size: 0;
-	visibility: hidden;
+.itinerary .step::after {
+    content: '.';
+    display: block;
+    height: 0;
+    clear: both;
+    font-size: 0;
+    visibility: hidden;
 }
-.itinerary .step .info
-{
-	float: left;
-	width: 120px;
-	margin-right: 1.5em;
-	overflow: hidden;	
+.itinerary .step .info {
+    float: left;
+    width: 120px;
+    margin-right: 1.5em;
+    overflow: hidden;
 }
-.itinerary .step .info .time
-{
-	font-weight: bold;
+.itinerary .step .info .time {
+    font-weight: bold;
 }
-.itinerary .step .info .hint
-{
-	font-style: italic;
-	font-size: .85em;
+.itinerary .step .info .hint {
+    font-style: italic;
+    font-size: .85em;
 }
-.itinerary .step .instuction
-{
-	overflow: hidden;
+.itinerary .step .instuction {
+    overflow: hidden;
 }
-.itinerary .step .instuction .button
-{
-	margin-top: .3em; 
+.itinerary .step .instuction .button {
+    margin-top: .3em;
 }
-.itinerary .step .instuction .details
-{
-	margin-top: .3em;
+.itinerary .step .instuction .details {
+    margin-top: .3em;
 }
-
-
-
 /* Z-index of #mask must lower than #boxes .window */
 #mask {
-  position:absolute;
-  top: 0;
-  bottom: 0;
-  z-index:9000;
-  background-color: #DDD;
-  opacity: .6;
-  display:none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 9000;
+    background-color: #DDD;
+    opacity: .6;
+    display: none;
 }
-   
 .window {
-  position:fixed;
-  display:none;
-  z-index:9999;
-  background-color: white;
-  border: 1px solid #CCC;
-  -webkit-box-shadow: 0 1px 5px #ccc;
-  padding: .2em;
-  width: 548px;  
+    position: fixed;
+    display: none;
+    z-index: 9999;
+    background-color: white;
+    border: 1px solid #CCC;
+    -webkit-box-shadow: 0 1px 5px #ccc;
+    padding: .2em;
+    width: 548px;
 }
-
-.window .header
-{
-	margin-bottom: .7em;
+.window .header {
+    margin-bottom: .7em;
 }
-
-.window h2
-{
-	color: #DD4B39;
-	font-size: 1.4em;
-	font-weight: normal;
-	margin: .4em;	
+.window h2 {
+    color: #DD4B39;
+    font-size: 1.4em;
+    font-weight: normal;
+    margin: .4em;
 }
-
-.options .option
-{
-	float: left;
-	width: 160px;
-	height: 250px;
-	border: 1px solid #CCC;
-	margin: 6px 2px 6px 7px; 
-	padding: .5em;
-	font-size: .8em;
-	cursor: default;
+.options .option {
+    float: left;
+    width: 160px;
+    height: 250px;
+    border: 1px solid #CCC;
+    margin: 6px 2px 6px 7px;
+    padding: .5em;
+    font-size: .8em;
+    cursor: default;
 }
-.options .option:hover
-{
+.options .option:hover {
     margin: 5px 1px 5px 6px;
     border: 2px solid #CCC;
 }
-
-.options .selected
-{
-	background-color: #FFC;
+.options .selected {
+    background-color: #FFC;
 }
-
-.options .option h3
-{
+.options .option h3 {
     margin: .5em 0 .5em 0;
 }
-
-.options .option .experience
-{
+.options .option .experience {
     margin-top: .4em;
 }
-
-.options .option .risks
-{
+.options .option .risks {
     margin-top: .4em;
 }
-
-.window .buttons
-{
-	float: right;
-	margin-right: .5em;
+.window .buttons {
+    float: right;
+    margin-right: .5em;
 }
-
-.gmnoprint
-{
-    display: none !important; //TODO: this statement breaks the ToS of Google maps, to be reviewed
+.gmnoprint {
+    display: none !important;//
+    TODO: this statement breaks the ToS of Google maps, to be reviewed
 }
