--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="searchpane">
-	<h3>Address in St. Petersburg</h3>
+	<h3>Hotel name or address in St. Petersburg</h3>
     <div class="searchbox">
 	    <input id="address" name="address" />
     </div>
@@ -14,5 +14,8 @@
 
 {% block scripts %}
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false">
+</script>
+<script type="text/javascript" language="javascript">
+	setupAddressAutocomplete();
 </script>
 {% endblock %}
