--- a/youth/templates/itinerary.html
+++ b/youth/templates/itinerary.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="pageheader">
 	<a href="/">Home</a>
+	<a href="/transit?from={{data.context.from_location}}" target="_blank">Route options</a>
 </div>
 <section class="itinerary">
 	<div class="buttons">	
