--- a/youth/templates/itinerary.html
+++ b/youth/templates/itinerary.html
@@ -55,7 +55,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false">
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false">
 </script>
 <script type="text/javascript" language="javascript">
 {% autoescape off %}
@@ -63,7 +63,7 @@
     {% for trip in data.trips %}
     	{% for step in trip.steps %}
     		{% if step.details.map != null %}
-				Context.route{{forloop.counter}} = {{step.details.map.points}};
+				Context.route{{forloop.counter}} = {{step.details.map.route}};
 			{% endif %}
 		{% endfor %}
 	{% endfor %}
