Trains + research on mustache

--- a/youth/templates/train.html
+++ b/youth/templates/train.html
@@ -10,6 +10,7 @@
 		<td>{{time.departure}}</td>
 		<td>-</td>
 		<td>{{time.arrival}}</td>
+		<td>({{time.get_duration}})</td>
 	</tr>
 {% endfor %}
 </table>
