--- a/youth/templates/controls/popup.html
+++ b/youth/templates/controls/popup.html
@@ -1,4 +1,4 @@
-<div id="dialog" class="window">
+<div id="dialog" class="window" style="display: none">
 	<div class="header">
 		<div class="buttons">
 			<div class="blue button" onclick="hidePopup()">X</div>
