--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -5,17 +5,30 @@
 {% block content %}
 <div class="searchpane">
 	<h3>Hotel name or address in St. Petersburg</h3>
-    <div class="searchbox">
-	    <input id="address" name="address" />
-    </div>
-    <div class="blue button" onclick="navigateToItinerary()">Search</div>
+	<div class="inputbox searchbox">
+		<input type="text" id="address" name="address" />
+	</div>
+	<h3>Departure date and time</h3>
+	<div class="datebox">
+		<div class="inputbox">
+			<input type="text" id="datepicker" />
+		</div>
+	</div>
+	<div class="timebox">
+		<div class="inputbox">
+			<input type="text" id="timepicker" value="09:30" />
+		</div>
+	</div>
+	<div class="buttons">
+		<div class="blue button" onclick="navigateToItinerary()">
+			Search
+		</div>
+	</div>
 </div>
 {% endblock %}
 
-{% block scripts %}
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false">
-</script>
+{% block scripts %} <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" language="javascript">
-	setupAddressAutocomplete();
+    setupHomeInputs();
 </script>
 {% endblock %}
