--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -4,7 +4,7 @@
     <title>{% block title %}{% endblock %}</title>    
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/common.js"></script>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
 	<link href="styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />    
 </head>
