Directions and URL changes

--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -14,11 +14,11 @@
 	<h1>{{data.title}}</h1>
 	<div class="summary">
 		<span class="icon">
-			<img src="images/clock.png" alt="Time" width="32" />
+			<img src="images/clock.png" alt="Time" width="32" height="37" />
 		</span>
 		<span class="time">{{data.time_text}}</span>
 		<span class="icon">
-			<img src="images/coins.png" alt="Price" width="32" />
+			<img src="images/coins.png" alt="Price" width="32" height="37" />
 		</span>
 		<span class="price">{{data.price_text}}</span>
 	</div>
