--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="searchpane">
+<div style="margin: 10px">&nbsp;</div>
 	<h3>Hotel name or address in St. Petersburg</h3>
 	<div class="inputbox searchbox">
 		<input type="text" id="hotel" name="address" />
@@ -28,7 +28,6 @@
 			Search
 		</div>
 	</div>
-</div>
 {% endblock %}
 
 {% block scripts %} 
