--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -9,7 +9,12 @@
 	<link href="styles/jquery-ui-1.8.20.custom.css" rel="stylesheet" type="text/css" />    
 </head>
 <body>
+	<div class="pageheader">
+		<a href="/">Home</a>
+	</div>
+	<div class="mainpane">
     {% block content %}{% endblock %}
+    </div>
     {% include "../controls/footer.html" %}
     {% block scripts %}{% endblock %}    
 </body>
