--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 	<div class="pageheader">
-		<a href="/">Home</a>
+		<div class="pane">
+			<a href="/">Youth Logo</a>
+		</div>
 	</div>
 	<div class="mainpane">
     {% block content %}{% endblock %}
