--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -34,9 +34,12 @@
 		</div>
 	</form>
 	<div class="features">
-		<div>Feature 1</div>
-		<div>Feature 2</div>
-		<div>Feature 3</div>
+		<div>Hello,
+the mission of this web site is in simplifying of your public transport navigation in Saint-Petersburg and suburbs.
+We've checked several popular web sites like map.google.com, map.yandex.ru and others and found provided variants weak and not realistic. Therefore we decided to make something better. We combined Google approach with our own ideas and it seems results are much better. We would like to get any feedback from you: how do you find our service? What do we do good, bad? Any other ideas are appreciated. Please contact us via e-mail (site_name@gmail.com) or our Facebook group!
+</div>
+		<div>Our web site will be especially helpful for St.Pete guests in their St.Pete trips. We understand that for foreign tourists who do not know Russian language but have to actively travel within the city it's very difficult to find correct and optimal way to move from one point interests to another. It was the reason why we add the list of points of interest as well as list of hotels to simplify route calculations.</div>
+		<div>We, this site creators, have been living in St.Pete for whole life and definitely know the best ways from one point to another within the city.</div>
 	</div>
 {% endblock %}
 
