--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,7 +75,7 @@ html {
 .features {
     font-style: italic;
     font-size: 1.5em;
-    text-align: justify
+    text-align: justify;
 }
 .searchbox {
     width: 402px;
