--- a/youth/templates/home.html
+++ b/youth/templates/home.html
@@ -10,11 +10,13 @@
 	<form class="homeform">
 		<h3>From</h3>
 		<div class="inputbox searchbox">
-			<input id="hotel" name="hotel" type="text" autocomplete="off" placeholder="try your hotel name or street address" />
+			<input id="from" name="from" type="text" autocomplete="off" placeholder="try your hotel name or street address" />
+			<img id="from_status" src="/images/empty.png" width="16" height="16" alt="Valid" />
 		</div>
 		<h3 class="to">To</h3>
 		<div class="inputbox searchbox">
-			<input id="attraction" name="attraction" type="text" autocomplete="off" placeholder="try Pulkovo Airport" />
+			<input id="to" name="to" type="text" autocomplete="off" placeholder="try State Hermitage" />
+			<img id="to_status" src="/images/empty.png" width="16" height="16" alt="Valid" />
 		</div>
 		<h3 class="datetime">Date and time</h3>
 		<div class="datebox">
