--- a/youth/templates/master/master.html
+++ b/youth/templates/master/master.html
@@ -12,7 +12,7 @@
 	<div class="pageheader">
 		<div class="pane">
 			<div class="logo">
-				<a href="/">Youth Logo</a>
+				<a href="/"><img src="images/logo.png" /></a>
 			</div>
 			<div class="menu">
 				<ul>
