--- a/youth/templates/about.html
+++ b/youth/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "master/master.html" %}
 
-{% block title %}About us{% endblock %}
+{% block title %}
+<title>About TripBenefit.com</title>
+{% endblock %}
 
 {% block content %}
 	<div class="headline">
