--- a/youth/templates/directions.html
+++ b/youth/templates/directions.html
@@ -1,6 +1,8 @@
 {% extends "master/master.html" %}
 
-{% block title %}Trip directions{% endblock %}
+{% block title %}
+<title>{{data.title}} | TripBenefit.com</title>
+{% endblock %}
 
 {% block content %}
 <section class="itinerary">
